--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   ],
   "author": "zjh <81681445@qq.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "assert": "^1.4.1",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
+    "fs-extra": "^6.0.0",
     "gulp-util": "^3.0.8",
+    "orchestrator": "^0.3.8",
     "through2": "^2.0.3",
     "vinyl": "^2.1.0"
+  },
+  "devDependencies": {
+    "event-stream": "^3.3.4",
+    "gulp": "^3.9.1"
   }
 }
