--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-html-include",
+  "name": "gulp-text-include",
   "version": "0.0.1",
-  "description": "gulp-html-include",
+  "description": "gulp-text-include",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
